Don't crash when opening with old java versions.